@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block title %} Web Server - Error Page {% endblock title %}
 
+{% block body %}
+
+<h1>Error Page</h1>
 Oopsies, this isn't the page you want. :(
 
-{% endblock %}
+{% endblock body %}
+
+
