@@ -1,6 +1,14 @@
+<!DOCTYPE html>
 <html>
-	<body>
-		{% block content %}
-		{% endblock %}
-	</body>
-</html>
+
+<head>
+{% block head %}
+  <title> {% block title %} {% endblock title %} </title>
+{% endblock head %}
+</head>
+
+<body>
+{% block body %}
+{% endblock body %}
+</body>
+ </html>
