@@ -1,12 +1,14 @@
 {% extends "base.html" %}
-{% block content %}
-	<h1>Hello, world!</h1>
-	This is jonest31's web server.<br />
-	<h2>Home</h2>
-	<ul>
-		<li><a href="/content">Content</a></li>
-		<li><a href="/file">File</a></li>
-		<li><a href="/image">Image</a></li>
-		<li><a href="/form">Form</a></li>
-	</ul>
-{% endblock %}
+
+{% block body %}
+
+<h1>Hello World!</h1>
+This is jonest31's Web server.
+<p>
+<a href='/content'>Content</a><br>
+<a href='/files'>Files</a><br>
+<a href='/images'>Images</a><br>
+<a href='/images_thumb'>Thumbnail Images</a><br>
+<a href='/form'>Form</a>
+
+{% endblock body %}
